--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div id="message-show" class="card-panel hide">
           <h1></h1>
           <div>
-            <a href="./index.html">Create Your secrete Message</a>
+            <a href="./index.html">Create Your secret Message</a>
           </div>
         </div>
         <div id="message-form" class="card-panel">
           <form>
-            <label>Enter a secrete message</label>
+            <label>Enter a secret message</label>
             <input id="message-input" />
             <button class="btn">Create</button>
           </form>
